LIST OF CHANGES

release 106.1.1 (2026-02-03)
 - Because of changes on CPAN, a request for an older version of Test::Compile
   does not work any longer. Allowed for the latest version of the package to
   be fetched during the build.

release 106.1.0 (2026-01-09)
 - Added manufacturer_is_UltimaGenomics method to npg_tracking::Schema::Result::Instrument
   class.
 - CI updates

release 106.0.0 (2025-11-18)
 - Consolidated functionality of the Ultimagen staging monitor in one class.
   Monitor::Ultimagen::RunParser class is deleted, the code from this class is
   moved to Monitor::Ultimagen::RunFolder.
 - In order to capture a variety of ways LIMS identifies are defined, changed
   the type of the `batch_id` column in the `run` table from BIGINT to
   VARCHAR(255). Updated the callback for creating a new run via UI.
 - Changed the type of batch_id attribute in Monitor::Elembio::RunParametersParser
   from int to string.
 - Captured the library pool identifier from Ultimagen data and saved it as
   a `batch_id` value for the run tracking database record.

release 105.9.0 (2025-11-03)
 - Updated find_with_attributes method of the Run ResultSet object to make
   run folder name optional. Changed the order of the attributes of the
   method. This change allows to identify existing run database records in
   cases when the run folder name has been changed and thus helps to prevent
   creating duplicate run records. The change is driven by the uncertainty
   around rules for UltimaGen platform on-instrument reanalysis.
 - Updated npg_status_save script to accept the username to be associated with
   the status this script creates. 
 - Added two new pipeline user records, 'eseq_pipeline' and 'useq_pipeline', to
   the 'user' table of the tracking database. These users should be used whenever
   the run status is updated by staging monitors or porch pipelines for the
   Elembio and Ultimagen platforms respectively.