@@ -114,7 +114,7 @@ IF ( ( current_status == 'qc review pending' ) || (current_status == 'qc in prog
   <li><a class="npg_menu" href="http://si-trace-web.internal.sanger.ac.uk:8080/cgi-bin/ebi_submissions.pl?show=both&filter=run&filter_op=equals&sort_by=run&psz=25&filter_val=[% id_run %]">EBI submissions</a></li>
 [% END -%]
  <li><a class="npg_menu" href="[% seqqc_url %]/illumina/runs/[% earliest_id %]">NPG QC</a></li>
-[%- IF model.has_analysis_in_progress %]
+[%- IF (model.instrument_format.manufacturer_is_Illumina == 0) || model.has_analysis_in_progress %]
  <li><a class="npg_menu" href="[% seqqc_url %]/checks/runs/[% earliest_id %]">NPG SeqQC</a></li>
 [% END -%]
 </ul>
